# acled_collector

./: Cargo.toml  config.toml.sample  diesel.toml
migrations/2022-02-02-091948_create_incidents/: down.sql  up.sql
src/: acled.rs  config.rs  db.rs  main.rs  schema.rs
src/acled/: incident.rs  mod.rs  request.rs  response.rs
