[package]
name = "acled_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = {version = "1.0.136", features = ["derive"]}
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
serde_json = "1.0.78"
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
postgis = "0.9.0"
log = "0.4.14"
env_logger = "0.9.0"
