[package]
name = "acled_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
env_logger = "0.9.0"
log = "0.4.14"
postgis = "0.9.0"
serde_json = "1.0.78"
reqwest = {version = "0.11.9", features = ["blocking", "json"]}
serde = {version = "1.0.136", features = ["derive"]}
structopt = { version = "0.3", default-features = false }
toml = "0.5.8"